<resources>
    <string name="app_name">绿色农场</string>
    <string name="title_home">首页</string>
    <string name="title_farm">农场</string>
    <string name="title_cart">购物车</string>
    <string name="title_mine">我的</string>
    <string name="title_my_farm">我的农场</string>
    <string name="title_farm_management">农场管理</string>
    <string name="title_add_farm">添加农场</string>
    <string name="title_farm_monitor">视频监控</string>
    <string name="rent_farm">农场出租</string>
    <string name="add_farm">添加农场</string>
    <string name="telephone_hint">请输入手机号</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="username_hint">请输入用户名</string>
    <string name="verification_hint">请输入右图中的验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="ip_hint">IP地址（测试用）</string>
    <string name="default_ip">192.168.43.192</string>
    <string name="username">用户名</string>
    <string name="finish">完成</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>