<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:scaleType="fitXY"
        android:src="@mipmap/vegetables"/>

    <LinearLayout
        android:id="@+id/form_and_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="278dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="43dp"
            android:paddingRight="31dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/username" />

                <EditText
                    android:id="@+id/et_login_telephone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:hint="@string/telephone_hint"
                    android:inputType="phone"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"
                android:background="#e8e7e7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/pwd" />

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/pwd_hint"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="55dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="67dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/shape_login_btn"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="55dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="67dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/shape_register_btn"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_and_btn"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/ipText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:hint="@string/ip_hint"
            android:background="@null"
            android:text="@string/default_ip"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

        </EditText>


    </LinearLayout>


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginBottom="200dp"-->
<!--        android:layout_marginTop="99dp">-->

<!--        <EditText-->
<!--            android:id="@+id/loginPhoneText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:inputType="phone"-->
<!--            android:hint="手机号"-->
<!--            android:textColor="@color/black"-->
<!--            android:textColorHint="@color/black"-->
<!--            android:padding="5dp"-->
<!--            android:background="@drawable/bg_input" />-->

<!--        <EditText-->
<!--            android:id="@+id/loginPasswordText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:background="@drawable/bg_input"-->
<!--            android:hint="密码"-->
<!--            android:inputType="textPassword"-->
<!--            android:padding="5dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textColorHint="@color/black"/>-->

<!--    </LinearLayout>-->



<!--    <Button-->
<!--        android:id="@+id/loginButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:background="@drawable/bg_btn"-->
<!--        android:text="登录"-->
<!--        android:textColor="@color/yellow" />-->

<!--    <Button-->
<!--        android:id="@+id/registerButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:background="@drawable/bg_btn"-->
<!--        android:text="注册"-->
<!--        android:textColor="@color/white" />-->

<!--    <EditText-->
<!--        android:id="@+id/ipText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:text="192.168.43.192"/>-->

</RelativeLayout>